common-services/lets-encrypt/secured-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secured-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
    - host: cloud-projectz.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
  tls:
    - hosts:
        - cloud-projectz.xyz
      secretName: cot-report-tls
